// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemBaseSection snapshot should match snapshot 1`] = `
<ListItemBaseSection>
  <div>
    Test
  </div>
</ListItemBaseSection>
`;

exports[`ListItemBaseSection snapshot should match snapshot with className 1`] = `
<ListItemBaseSection
  className="example-class"
>
  <div
    className="example-class"
  >
    Test
  </div>
</ListItemBaseSection>
`;

exports[`ListItemBaseSection snapshot should match snapshot with id 1`] = `
<ListItemBaseSection
  id="example-id"
>
  <div
    id="example-id"
  >
    Test
  </div>
</ListItemBaseSection>
`;

exports[`ListItemBaseSection snapshot should match snapshot with position 1`] = `
<ListItemBaseSection
  position="end"
>
  <div
    data-position="end"
  >
    Test
  </div>
</ListItemBaseSection>
`;

exports[`ListItemBaseSection snapshot should match snapshot with style 1`] = `
<ListItemBaseSection
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    style={
      Object {
        "color": "pink",
      }
    }
  >
    Test
  </div>
</ListItemBaseSection>
`;
